# cyberimmune-systems-example-traffic-light-kos

./: CMakeLists.txt
diagnostic/: CMakeLists.txt
diagnostic/src/: diagnostic.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
resources/: Diagnostic.edl
